// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Spinner Defaults play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25  "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       id="htmlid"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 dummyClassname "
       lang="nb"
       data-testid="123ID"
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithColorsDarkBackground smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_white_wnf1f_19 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25  "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithColorsLightBackground smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25  "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Henter innhold
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithHideText play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25  "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
      laster data
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithRef play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25  "
       id="dummyIdForwardedFromRef"
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithSizeAndPosition smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_small_wnf1f_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59   ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_medium_wnf1f_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59   ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_large_wnf1f_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59   ">
      henter innhold
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithSizeAndPositionLongText smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66 ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_small_wnf1f_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59   ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_medium_wnf1f_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59   ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_large_wnf1f_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_wnf1f_40 ">
    </div>
    <span class="_spinnerTitle_wnf1f_59   ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
</div>
`;
